# bpf-info-rs

./: Cargo.toml  README.md
bpf-metrics/: Cargo.toml
bpf-metrics-statsd/: Cargo.toml
bpf-metrics/examples/: README.md  print.rs
bpf-metrics/examples/prometheus/: main.rs
bpf-metrics/src/: bpf_metrics.rs  bpf_stats.rs  lib.rs
bpf-metrics/src/metrics/: link_info.rs  map_info.rs  mod.rs  prog_info.rs
