[package]
name = "bpf-metrics"
version = "0.1.0"
description = "eBPF metrics emitter based on OpenMetrics standards"
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
aya = { git = "https://github.com/tyrone-wu/aya.git", branch = "dev" }
aya-obj = { git = "https://github.com/tyrone-wu/aya.git", branch = "dev" }
prometheus-client = "0.22.2"

[features]
default = ["metrics", "bpf-stats"]
bpf-stats = []
metrics = []
